prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/custom_ce-1.stderr
error: [Prusti: verification error] assertion might fail with "attempt to add with overflow"
  --> $DIR/custom_ce-1.rs:32:5
   |
32 |     x.a + y.0 == a
   |     ^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/custom_ce-1.rs:32:5
   |
32 |     x.a + y.0 == a
   |     ^^^^^^^^^
note: counterexample for "x"
       value:   a = -2147475930; b = -2147462410 = -2147462410 = b
  --> $DIR/custom_ce-1.rs:30:10
   |
30 | fn test1(x: X<i32>, a: i32, y: Y, z:Z) -> bool{
   |          ^
note: counterexample for "a"
       value:   1
  --> $DIR/custom_ce-1.rs:30:21
   |
30 | fn test1(x: X<i32>, a: i32, y: Y, z:Z) -> bool{
   |                     ^
note: counterexample for "y"
       value:   unnamed field of Y = -7719
  --> $DIR/custom_ce-1.rs:30:29
   |
30 | fn test1(x: X<i32>, a: i32, y: Y, z:Z) -> bool{
   |                             ^
note: counterexample for "z"
       value:   not initialized
  --> $DIR/custom_ce-1.rs:30:35
   |
30 | fn test1(x: X<i32>, a: i32, y: Y, z:Z) -> bool{
   |                                   ^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/custom_ce-1.rs:36:19
   |
36 | fn test2(z: Z) -> bool{
   |                   ^^^^
   |
note: the error originates here
  --> $DIR/custom_ce-1.rs:36:1
   |
36 | / fn test2(z: Z) -> bool{
37 | |     match z {
38 | |         Z::E{ g:1, h: 2, i:3 } => false,
39 | |         _ => true,
40 | |     }
41 | | }
   | |_^
note: counterexample for "z"
       value:   values: 1, 2, 3
  --> $DIR/custom_ce-1.rs:36:10
   |
36 | fn test2(z: Z) -> bool{
   |          ^
note: counterexample for "result"
       value:   false
  --> $DIR/custom_ce-1.rs:38:35
   |
38 |         Z::E{ g:1, h: 2, i:3 } => false,
   |                                   ^^^^^

error: aborting due to 2 previous errors

